# ProjectBalancer

./: .env.example  .gitignore  .replit  7.0.0  BUILD_INSTRUCTIONS.md  CONFLUENCE_INTEGRATION.md  OPTIMIZATION_ANALYSIS.md  QUICK_START_CONFLUENCE.md  README.md  app.py  app.spec  assignment_parser.py  build_exe.bat  confluence_publisher.py  confluence_reader.py  connect_cli.py  example_release_notes.json  fluent_ui_components.py  gantt_chart.py  install_venv_deps.bat  intelligent_optimization.py  md3_components.py  msproject_utils.py  personnel_management.py  pyproject.toml  rebuild.bat  replit.md  requirements_confluence.txt  requirements_exe.txt  resource_parser.py  run_app.py  run_tests.bat  sample_project.xml  server_connection.py  server_data_loader.py  test_resource_parser.py
.local/state/replit/agent/filesystem/: filesystem_state.json
.streamlit/: config.toml
data/: employees.json
tests/: conftest.py  test_assignment_parser.py  test_msproject_utils.py  test_resource_parser.py  test_task_parser.py
tests/fixtures/: assignment_missing_refs.xml  resource_empty_fields.xml  resource_no_namespace.xml  task_no_name.xml
