[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf>=1.7.2",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "python-dateutil>=2.9.0.post0",
    "reportlab>=4.4.4",
    "streamlit>=1.51.0",
    "pytest>=7.0.0",
    "requests>=2.31.0",
    "requests-ntlm>=1.2.0",
]
